--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 		</div>
 	</section>
 
-	<section class="options">
+<!-- 	<section class="options">
 
 		<div class="options-block">
 			<span>Офисы</span>
@@ -1062,7 +1062,7 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
 	<section class="modal-call-back modal-hidden">
 		<div class="modal-call-back__content">
 		<button class="modal-call-back__close"><img src="img/closebutton2.png" alt="close button"></button>
